--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -1,5 +1,13 @@
 .h1, h1 {
     font-size: 2.5rem;
+    text-align: center;
+    color: #4eb5f1;
+    text-shadow: 2px 2px 3px rgba(53, 80, 201, 0.705)
+}
+
+h2 {
+  color: #4eb5f1;
+  text-shadow: 1px 1px 1px rgba(53, 80, 201, 0.705)
 }
 
 fieldset {
@@ -9,10 +17,17 @@ fieldset {
     border: 0;
 }
 
+label {
+  color: #4eb5f1;
+  font-weight: 600;
+}
+
 .form--login {
     display: inline-block;
-    margin: 0 auto;
+    margin: 4px auto;
     text-align: left;
+    padding: 1.5em;
+    border-radius: 0.5em;
 }
 
 .form--login > fieldset > input[type="email"],
@@ -21,8 +36,8 @@ fieldset {
 }
 
 .label--login {
-    width: 8rem;
-    display: inline-block;
+  width: 8rem;
+  display: inline-block;
 }
 
 .form-control {
@@ -37,7 +52,7 @@ fieldset {
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: .25rem;
+    border-radius: .6rem;
     -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
@@ -48,13 +63,14 @@ fieldset {
 
 .form--login {
     background-position-x: right;
-    background-image: url(logo.png);
+    
     z-index: 1;
     min-height: 25rem;
     min-width: 45rem;
     background-color: hsla(0,0%,100%,0.40);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
+    margin: 0.5em;
 }
 
 .button--close {
@@ -67,3 +83,32 @@ fieldset {
     min-height: 5rem;
 }
 
+.btn {
+  padding:0.5em 1.2em;
+  margin:0 0.5em;
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-size: 1rem;
+  font-weight:600;
+  color:#FFFFFF;
+  background-color:#4eb5f1;
+  text-align:center;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background-color:#4095c6;
+  color: orange;
+}
+
+.link--reg {
+  color: white;
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+.link--reg:hover{
+  color:#4eb5f1;
+}
