--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,30 @@
+nav {
+  position: relative;
+  padding-top: 0px;
+  margin: 0;
+  box-shadow: 3px 3px 5px rgba(53, 80, 201, 0.705);
+}
+
 .navbar {
     display: flex;
     flex-wrap: nowrap;
     justify-content: left;
+    background-color: #4eb5f1;
+    padding: 1em;
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+}
+
+.navbar__link {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.navbar__link:hover, .navbar__link:active {
+  color: rgb(255, 166, 0);
 }
