--- a/src/components/users/User.css
+++ b/src/components/users/User.css
@@ -1,13 +1,55 @@
+.user__profile {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  margin: 1.3em;
+  padding: 0.6em;
+  border: 2px solid #4eb5f1;
+  border-radius: 1em;
+  box-shadow: 3px 3px 5px rgba(53, 80, 201, 0.705);
+}
 
 .users {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .user {
-    flex-basis: 28%;
-    margin: 1em;
-    padding: 1em;
-    border: 1px solid goldenrod;
+  background-color: white;
+  padding: 1em;
+  margin: 1.3em 16em;
+  border: 2px solid #4eb5f1;
+  border-radius: 1em;
+  box-shadow: 3px 3px 5px rgba(53, 80, 201, 0.705);
 }
+
+.user__link {
+  text-decoration: none;
+  color: #4eb5f1;
+}
+
+.user__link:hover {
+  color: orange;
+}
+
+.name {
+  color: #4eb5f1;
+  font-weight: bold;
+}
+
+.user__email {
+  color: #4eb5f1;
+  font-weight: bold;
+}
+
+.user__detail {
+  background-color: white;
+  color: orange;
+  padding: 1rem;
+  margin: 1em 40% auto;
+  border: 2px solid #4eb5f1;
+  border-radius: 1em;
+  box-shadow: 3px 3px 5px rgba(53, 80, 201, 0.705);
+}
+
